namespace SeaInk.Application.Models
{
    public record SubjectModel(int UniversityId, string Title);
}