namespace SeaInk.Core.Models
{
    public class SubjectActivity
    {
        public string Student { get; set; }
        public int Points { get; set; }
    }
}